# dog2026

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
TEST01/: a.c  a.h  b.c
atmega128/: CMakeList  CMakeLists.txt
atmega128/lib/lcd/: lcdconf.h
atmega128/lib/sht20/: SHT2x.c
atmega128/src/: cds.c  cds2.c  dc_motor.c  dc_pwm.c  dc_pwm_vr.c  external_eeprom.c  external_eeprom2.c  fnd1.c  fnd2.c  i2c_tempHumi.c  interrup_fnd.c  interrupt1.c  led2.c  led3.c  led4.c  main.c  pir.c  pwmServoSwitch.c  pwmbuzzer.c  pwmled.c  pwmservo.c  switch1.c  switch2.c  switch_fnd.c  timer0led.c  timer1com.c  timer2ledleftright.c  uart1.c  uart2.c  uart3.c
bowling/: bowling.c  bowling.h  main.c  mainmy  mainmy.c
c_example/: alphabet  alphabet.c  bigLetter  celsius2Fahr.c  charNumber  compare  compare.c  compare2  fourbit  genderRatio.c  increment.c  limit  limit.c  literal  literal.c  makefile  oddEven  stringCopy  stringCopy.c  triangle  triangle.c  triangle2
c_example/10일/: alphabet.c  charNumber.c
c_example/part1/: bigLetter.c  compare2.c  fahr2Celcius.c  fourbit.c  hello  hello.c  makefile temp2  makefile_temp  oddEven.c  triangle2.c
c_example/part2/: A2Z  A2Z.c  a2bSum.c  absoluteValue  absoluteValue.c  arrayInit.c  dice  dice.c  dice2.c  findMax  findMax.c  lotto  lotto.c  multiply  multiply.c  one2TenSum.c  one2TenSumWhile  one2TenSumWhile.c  oneToTenFor.c  oneToTenWhile.c  passFail  passFail.c  passFail2  passFail2.c  posZeroNeg  posZeroNeg.c  scoreGrade  scoreGrade.c  scoreGradeswitch  scoreGradeswitch.c  star.c  star2  star2.c  sumArray  sumArray.c  sumMatrix.c  xstar  xstar.c
c_example/part3/: CMakeLists.txt  add  add.c  arrayAssignment.c  arraycompare.c  bubbleSorting.c  localVariable  localVariable.c  pointer1  pointer1.c  pointer2.c  pointer3  pointer3.c  pointer4_doublepointer.c  pointer5_functionpointer.c  pointer6_voidpointer.c  pointerAndArray.c  pointerAndArray2  pointerAndArray2.c  qsort  qsort.c  selectionSorting.c  swap.c
c_example/part4/baseballGame/: baseballGame.c  baseballGame.h  main.c
c_example/part4/carSerial/: CMakeLists.txt  main.c  makefile  serial.c  serial.h
c_example/part4/myRandom/: main  main.c  myRandom.c
c_example/part5/: charGetPut  charGetPut.c  charGetPut2.c  charGetPut3.c  charGetPut4.c  enumExample  enumExample.c  makefile  selfReference  selfReference.c  string3  string3.c  stringExample  stringExample.c  struct.c  struct2  struct2.c  struct3_twoint.c  struct4.c  structArray  structArray.c  unionExample  unionExample.c
c_example/part5/date/: date.c  main.c
c_example/part5/twoDouble/: main.c  twoDouble.c  twoDouble.h
c_example/part6/: dynamicAllocation  dynamicAllocation.c  dynamicAllocation2  dynamicAllocation2.c  dynamicAllocation3  dynamicAllocation3.c  dynamicAllocation4  dynamicAllocation4.c  fileDescriptor  fileDescriptor.c  filePointer  filePointer.c  variableLengthArray.c
c_example/part6/scoreProcess/: main.c  score.out  scoreProcess.c  scoreProcess.h
ds/list/: list1  list1.c
ds/queue/: queue1  queue1.c
ds/queue/myqueue1/: CMakeLists.txt  main.c  queue1.c  queue1.h
ds/queue/myqueue2/: CMakeLists.txt  main.c  queue2.c  queue2.h
ds/queue/myqueue3/: CMakeLists.txt  main.c  queue3.c  queue3.h
ds/stack/: stack1  stack1.c
ds/stack/mystack1/: main.c  stack.c  stack.h
ds/stack/mystack2/: CMakeLists.txt  main.c  stack2.c  stack2.h
ds/stack/mystack3/: CMakeLists.txt  main.c  stack3.c  stack3.h
ds/stack/mystack4/: CMakeLists.txt  main.c  stack4.c
network/: mqttPub  mqttPub.c  mqttPubmy  mqttPubmy.c
pico/: CMakeLists.txt
pico/src/: cds.c  cds1.c  dht.c  main.c  project0.c  project1.c
pico/src/mqtt/: CMakeLists.txt
