cmake_minimum_required(VERSION 3.10)
project(dog2026)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_C_STANDARD 17)

add_subdirectory(c_example/part3)
add_subdirectory(c_example/part4/carSerial)
add_subdirectory(c_example/part4/myRandom)
add_subdirectory(c_example/part4/baseballGame)
add_subdirectory(c_example/part5/date)
add_subdirectory(c_example/part5/twoDouble)
add_subdirectory(c_example/part6/scoreProcess)
add_subdirectory(ds/stack/mystack1)
add_subdirectory(ds/stack/mystack2)
add_subdirectory(ds/stack/mystack3)
add_subdirectory(ds/queue/myqueue1)
add_subdirectory(ds/queue/myqueue2)
add_subdirectory(network)